<resources>
    <string name="app_name">Univ\'Location</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_maps">Carte</string>
    <string name="title_activity_itineraire">Itinéraire</string>
    <string name="title_activity_aide">Aide</string>
    <string name="title_activity_calendrier">Calendrier</string>

    <string name="emploi_du_temps">Emploi du temps</string>
    <string name="precedent">Précédent</string>
    <string name="suivant">Suivant</string>
    <string name="y_aller">Itinéraire</string>

    <string name="trouver_toilettes">Toilettes</string>
    <string name="trouver_distrib">Distributeurs</string>
    <string name="trouver_manger">Restauration</string>
    <string name="trouver_prochain_cours">Prochain cours</string>
    <string name="recherche">Rechercher</string>

    <string name="PMR">Personne à mobilité réduite</string>
    <string name="entree_principale">Entrée principale</string>
    <string name="ma_position">Ma position</string>
    <string name="depart">Départ :</string>
    <string name="arrivee">Arrivée :</string>
    <string name="etape">Étape :</string>

    <string name="changer_vue">Plan/Satellite</string>

    <string name="etage_plus">+</string>
    <string name="etage_moins">-</string>

    <string name="aide">
<![CDATA[
<html>
    <head></head>
    <body style="text-align:center;background-color:#404040;">
        <h2 style="color:#993299;font-weight:bold;">Bienvenue sur Univ\'Location</h2>
        <div style="background:#606060;border-style:solid;border-color:#606060;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">À quoi me sert cette application ?</span>
            <br/><br/>
            <span style="color:#aaaaaa">Univ\'Location vous permet de vous repérer et vous diriger dans le campus de la Faculté des Sciences. Elle vous permet aussi de consulter votre emploi du temps.</span>
        </div>
        <br/>
        <div style="background:#505050;border-style:solid;border-color:#505050;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">Comment me rendre où je souhaite ?</span>
            <br/><br/>
            <span style="color:#aaaaaa">Pour vous rendre à un certain endroit, vous devez passer par le formulaire d\'itinéraire accessible depuis le menu de navigation ou depuis la carte en appuyant sur le bouton en bas. Vous pouvez y préciser le départ, l\'arrivée ainsi qu\'une éventuelle étape. Veillez à avoir activé votre localisation.</span>
        </div>
        <br/>
        <div style="background:#606060;border-style:solid;border-color:#606060;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">Je suis une personne à mobilité réduite</span>
            <br/><br/>
            <span style="color:#aaaaaa">Pas de panique, il existe une option PMR dans le choix d\'un itinéraire.</span>
        </div>
        <br/>
        <div style="background:#505050;border-style:solid;border-color:#505050;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">Mon itinéraire me fait changer d\'étage</span>
            <br/><br/>
            <span style="color:#aaaaaa">En cas d\'itinéraire muti-étages, vous pouvez utiliser les boutons \'+\' et \'-\' de la carte pour afficher les différents niveaux. Sur le tracé du chemin, les portions de niveaux différents sont représentées par des nuances de gris : du plus foncé (niveau -2) au plus clair (niveau 1). Le niveau auquel vous êtes est écrit en haut de l\'écran.</span>
        </div>
        <br/>
        <div style="background:#606060;border-style:solid;border-color:#606060;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">Comment vite aller aux toilettes ?</span>
            <br/><br/>
            <span style="color:#aaaaaa">Une option permet de montrer directement l\'emplacement des toilettes uniquement du niveau auquel vous êtes. Elle se trouve dans le menu déroulant en haut à droite de la page \'Carte\'.</span>
        </div>
        <br/>
        <div style="background:#505050;border-style:solid;border-color:#505050;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">J\'ai une petite faim</span>
            <br/><br/>
            <span style="color:#aaaaaa">Il y a une option similaire à celle de l\'affichage des toilettes, mais pour afficher l\'emplacement des distributeurs et machines à café du campus tout niveaux confondus.<span>
        </div>
        <br/>
        <div style="background:#606060;border-style:solid;border-color:#606060;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">J\'ai une grosse faim</span>
            <br/><br/>
            <span style="color:#aaaaaa">De même que pour toilettes et distributeurs, vous pouvez afficher les points de restauration.<span>
        </div>
        <br/>
        <div style="background:#505050;border-style:solid;border-color:#505050;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">Comment visualiser mon emploi du temps ?</span>
            <br/><br/>
            <span style="color:#aaaaaa">Il suffit de vous rendre dans \'Calendrier\' depuis le menu de navigation. Le calendrier affiché doit avoir été au préalable importé dans votre appareil, via le clonage à un compte ou directement depuis l\'URL récupérée sur l\'ENT de l\'UJM. Attention, l\'application récupère tous les événements stockés dans l\'appareil qui ont un lieu. Il se peut que d\'autres événements ne concernant pas votre emploi du temps y apparaissent.</span>
        </div>
        <br/>
        <div style="background:#606060;border-style:solid;border-color:#606060;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">Je ne suis pas à l\'aise avec le plan</span>
            <br/><br/>
            <span style="color:#aaaaaa">Une vue satellite vous est proposée si celle-ci vous convient mieux.</span>
        </div>
        <br/>
        <div style="background:#505050;border-style:solid;border-color:#505050;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">Je suis presque en retard</span>
            <br/><br/>
            <span style="color:#aaaaaa">Une option \'prochain cours\' est accessible et vous permet de directement afficher un itinéraire vers votre prochain cours.</span>
        </div>
        <br/>
        <div style="background:#606060;border-style:solid;border-color:#606060;border-width:2px;border-radius:10px;">
            <span style="padding:5px;color:#b055b0">J\'ai d\'autres questions</span>
            <br/><br/>
            <span style="color:#aaaaaa">Pour tout autre question ou précision, veuillez nous contacter par mail à l\'adresse <span style="color:#63c1ba;text-decoration:underline;">support@univlocation.com</span></span>
        </div>
    </body>
</html>
]]>
</string>
</resources>
