<?xml version="1.0" encoding="utf-8"?>
<menu android:id="@+id/menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/recherche"
        android:title="@string/recherche"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="always" />

    <item android:id="@+id/trouver_wc"
        android:title="@string/trouver_toilettes"
        android:icon="@drawable/ic_wc_white_48dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/trouver_distrib"
        android:title="@string/trouver_distrib"
        android:icon="@drawable/ic_free_breakfast_white_48dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/trouver_manger"
        android:title="@string/trouver_manger"
        android:icon="@drawable/ic_restaurant_white_48dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/trouver_prochain_cours"
        android:title="@string/trouver_prochain_cours"
        android:icon="@drawable/ic_school_white_48dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/changer_vue"
        android:title="@string/changer_vue"
        android:icon="@drawable/ic_terrain_white_48dp"
        app:showAsAction="ifRoom" />

</menu>
