<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jules.univLocation.ItineraireActivity"
    tools:showIn="@layout/app_bar_itineraire">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/depart"
            android:textColor="@color/colorText"
            android:id="@+id/text_depart" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMail"
            android:imeOptions="actionNext"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:id="@+id/depart"
            android:text="@string/ma_position" />

        <TextView
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/etape"
            android:textColor="@color/colorText"
            android:id="@+id/etape_label" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:id="@+id/etape"
            android:text="" />

        <TextView
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/arrivee"
            android:textColor="@color/colorText"
            android:id="@+id/text_arrivee" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:id="@+id/arrivee" />

        <Switch
            android:layout_marginTop="7dp"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/PMR"
            android:id="@+id/PMR"
            android:layout_gravity="center_horizontal|end"
            android:textColor="@color/colorText"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/erreur"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textColor="@color/colorError"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
