<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jules.univLocation.CalendrierActivity"
    tools:showIn="@layout/app_bar_calendrier">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_calendrier" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emploi_du_temps"
            android:id="@+id/edt"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/heure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/nom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/salle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="@color/colorMail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <Button
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/precedent"
                android:text="@string/precedent"
                android:padding="10dip"
                android:background="@drawable/bouton"
                android:textColor="@color/colorText" />

            <Button
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/y_aller"
                android:text="@string/y_aller"
                android:padding="10dip"
                android:background="@drawable/bouton"
                android:textColor="@color/colorText" />

            <Button
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/suivant"
                android:text="@string/suivant"
                android:padding="10dip"
                android:background="@drawable/bouton"
                android:textColor="@color/colorText" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>